GH-5: minor fixes
Signed-off-by:Bart Hanssens <bart.hanssens@bosa.fgov.be>